# vemem

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bridges/: README.md  openclaw_bridge.py  vemem_http.py
docs/: ARCHITECTURE.md  README.md
docs/examples/: README.md  bridge.py  claude_desktop_config.json  cli_tour.md  mcp_usage.md  openai_tools.md  real_bridge.md
docs/examples/openclaw-plugin/: README.md  index.ts  openclaw.plugin.json
docs/plan/: v0-implementation.md
docs/spec/: identity-semantics.md
integrations/openclaw/: README.md
integrations/openclaw/plugin/: index.ts  openclaw.plugin.json  package.json
integrations/openclaw/plugin/skills/: README.md
integrations/openclaw/plugin/skills/vemem/: SKILL.md
scripts/: sync-bundled-skill.sh
skills/: README.md
skills/vemem/: SKILL.md
skills/vemem/references/: examples.md
src/vemem/: __init__.py  facade.py  pipeline.py
src/vemem/cli/: __init__.py  __main__.py  app.py  commands_util.py  context.py  output.py
src/vemem/core/: __init__.py  enums.py  errors.py  ids.py  ops.py  protocols.py  types.py
src/vemem/encoders/: __init__.py  clip_encoder.py  crop.py  insightface_detector.py  insightface_encoder.py
src/vemem/integrations/: __init__.py
src/vemem/integrations/openclaw/: __init__.py  __main__.py  sidecar.py
src/vemem/mcp_server/: __init__.py  __main__.py  config.py  serialization.py  server.py  tools.py
src/vemem/storage/: __init__.py  lancedb_store.py  migrations.py  schemas.py
src/vemem/tools/: __init__.py  __main__.py  export.py  schemas.py
tests/: conftest.py  test_facade.py  test_pipeline.py  test_scaffold.py
tests/cli/: conftest.py  test_commands.py
tests/core/: test_errors.py  test_ids.py  test_ops_basic.py  test_ops_corrections.py  test_ops_undo.py  test_protocols.py  test_types.py
tests/e2e/: test_end_to_end.py
tests/encoders/: conftest.py  test_clip.py  test_crop.py  test_insightface.py
tests/examples/: conftest.py  test_bridge.py
tests/fixtures/: README.md
tests/mcp_server/: _test_backends.py  conftest.py  test_server.py  test_tools.py
tests/storage/: test_lancedb_specific.py  test_store_contract.py
tests/support/: fake_store.py  images.py
tests/tools/: test_schemas.py
tests/tools/snapshots/: tools.json
