[project]
name = "vemem"
version = "0.0.1"
description = "Persistent visual entity memory for AI agents — self-hosted, model-agnostic"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "wlinville", email = "wlinville@gmail.com" }]
keywords = [
    "memory",
    "vision",
    "llm",
    "agent",
    "face-recognition",
    "visual-identity",
    "mcp",
    "multimodal",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lancedb>=0.19,<0.20",
    "pyarrow>=18",
    "numpy>=2",
    "insightface>=0.7",
    "onnxruntime>=1.20",
    "open_clip_torch>=2.30",
    "pillow>=11",
    "mcp>=1.12",
]

[project.urls]
Homepage = "https://github.com/linville-charlie/vemem"
Repository = "https://github.com/linville-charlie/vemem"
Issues = "https://github.com/linville-charlie/vemem/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vemem"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # allow pytest-style names in tests

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Third-party libs without py.typed — silence import-untyped so strict mypy
# doesn't drown in noise on external deps.
[[tool.mypy.overrides]]
module = [
    "lancedb",
    "lancedb.*",
    "pyarrow",
    "pyarrow.*",
    "insightface",
    "insightface.*",
    "onnxruntime",
    "onnxruntime.*",
    "open_clip",
    "open_clip.*",
    "PIL",
    "PIL.*",
    "torch",
    "torch.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: slow tests requiring model weights (set VEMEM_RUN_INTEGRATION=1 to run)",
]
